--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,27 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  messages:
+    api:
+      error_400: Invalid parameter specified.
+      error_401: Authentication has failed.
+      error_403: Operation not allowed.
+      error_404: Resource not found.
+      error_409: A conflict has occurred for the requested resource.
+      error_500: The request has failed due to some unknown error.
+
+      firebase_auth_error: Firebase authentication failed.
+      duplicate_map_name: Map name is duplicated.
+      map_name_required: Map name is required.
+      map_name_exceed: 'Map name is too long. (Max: 30)'
+      map_description_required: Please enter a description of the map.
+      map_description_exceed: 'Description of the map is too long. (Max: 140)'
+      map_owner_not_specified: Please specify the owner of the map.
+
+      duplicate_reviews: You can not post about the same spot.
+      place_id_not_specified: Place ID has not been specified.
+      comment_required: Comment is required.
+      comment_exceeded: Comment is too long.
+      invalid_uri: Invalid URI.
+
+      map_owner_cannot_removed: Map owner cannot be removed.
