--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,6 +10,7 @@ ja:
 
       sign_in_required: This action requires sign in.
       firebase_auth_error: Firebase authentication failed.
+      pubsub_auth_error: Pub/Sub authentication failed.
       duplicate_map_name: Map name is duplicated.
       map_name_required: Map name is required.
       map_name_exceed: "Map name is too long. (Max: 30)"
