--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,32 +1,27 @@
 ja:
   messages:
     api:
-      error_400: Invalid parameter specified.
-      error_401: Authentication has failed.
-      error_403: Operation not allowed.
-      error_404: Resource not found.
-      error_409: A conflict has occurred for the requested resource.
-      error_500: The request has failed due to some unknown error.
+      error_400: 不正なリクエストです。
+      error_401: 認証エラーが発生しました。
+      error_403: 許可されていない操作です。
+      error_404: リソースが見つかりませんでした。
+      error_409: リクエストの内容が競合しています。
+      error_500: サーバー内部エラーが発生しました。
 
-      sign_in_required: This action requires sign in.
-      firebase_auth_error: Firebase authentication failed.
-      pubsub_auth_error: Pub/Sub authentication failed.
-      duplicate_map_name: Map name is duplicated.
-      map_name_required: Map name is required.
-      map_name_exceed: "Map name is too long. (Max: 30)"
-      map_description_required: Please enter a description of the map.
-      map_description_exceed: "Description of the map is too long. (Max: 200)"
-      map_owner_not_specified: Please specify the owner of the map.
+      firebase_auth_error: 認証エラーが発生しました。
+      pubsub_auth_error: 認証エラーが発生しました。
+      duplicate_map_name: 既に存在するマップ名です。
+      map_name_required: マップ名を入力してください。
+      map_name_exceed: "マップ名が長すぎます。(最大: 30 文字)"
+      map_description_required: マップの説明を入力してください。
+      map_description_exceed: "マップの説明が長すぎます。(最大: 200 文字)"
+      map_owner_not_specified: マップのオーナーを指定してください。
 
-      duplicate_reviews: You can not post about the same spot.
-      place_id_not_specified: Place ID has not been specified.
-      place_not_found: Place not found.
+      comment_required: コメントを入力してください。
+      comment_exceeded: "コメントが長すぎます。(最大: 500 文字)"
+      invalid_uri: 不正な URL です。
 
-      comment_required: Comment is required.
-      comment_exceeded: "Comment is too long. (Max: 500)"
-      invalid_uri: Invalid URI.
+      map_owner_cannot_removed: マップのオーナーはアンフォローできません。
 
-      map_owner_cannot_removed: Map owner cannot be removed.
-
-      registration_token_is_required: Registration token is required.
-      registration_token_is_duplicated: Registration token is duplicated.
+      registration_token_is_required: 登録トークンを入力してください。
+      registration_token_is_duplicated: 既に登録されているトークンです。
